RESOLVED FIXED303493
[WPE][GTK] Fix typo in ThreadedCompositor.cpp, rename to didCompositeRenderingUpdateFunction
https://bugs.webkit.org/show_bug.cgi?id=303493
Summary [WPE][GTK] Fix typo in ThreadedCompositor.cpp, rename to didCompositeRenderin...
Alejandro G. Castro
Reported 2025-12-03 11:50:06 PST
The name was missing a g.
Attachments
Alejandro G. Castro
Comment 1 2025-12-03 11:51:42 PST
EWS
Comment 2 2025-12-04 01:08:40 PST
Committed 303894@main (88ede940ca71): <https://commits.webkit.org/303894@main> Reviewed commits have been landed. Closing PR #54790 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.