[WPE][GTK] Fix typo in ThreadedCompositor.cpp, rename to didCompositeRenderingUpdateFunction https://bugs.webkit.org/show_bug.cgi?id=303493

Reviewed by Nikolas Zimmermann.

This is just a rename to fix a typo in the function name.

No new tests needed.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::invalidate):
(WebKit::ThreadedCompositor::renderLayerTree):
(WebKit::ThreadedCompositor::requestCompositionForRenderingUpdate):
(WebKit::ThreadedCompositor::didCompositeRunLoopObserverFired):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.h:

Canonical link: https://commits.webkit.org/303894@main